--- a/src/component/layout/Layout.module.css
+++ b/src/component/layout/Layout.module.css
@@ -1,6 +1,6 @@
-.main {
-    margin: 3rem auto;
-    width: 90%;
+form,.sideBarContent {
+    margin: 0.5rem auto;
+    width: 100%;
     max-width: 40rem;
 }
 .auth-wrapper {
